# Course_Projects

./: 2018spr_semester  README.md
2015_fall/TCP-IP-socket-communication-SCANDA-system-project-master/: General control program  README.md  RTU kernel  RTU_User
2018spr_course/CS-428----Software-engineering-II/: start.txt
2018spr_course/CS-428----Software-engineering-II/GradeMe/: LICENSE  index.html  index.js  package-lock.json  package.json  webpack.dev.config.js
2018spr_course/CS436 -- Computer network lab/: start.txt
2018spr_course/CS436 -- Computer network lab/LAB1/: Copy of CS 436_ Lab 1 Collaboration Space.docx  report1.docx
2018spr_course/CS463 -- Computer security II/: start.txt
2018spr_course/CS463 -- Computer security II/MP3/: CMakeLists.txt
2018spr_course/CS463 -- Computer security II/MP3/code/mp3_server/: dataset1.csv  dataset3.csv  server.py  testset.csv
2018spr_course/CS463 -- Computer security II/MP3/code/mp3_server/Enclave/: Enclave.edl
2018spr_course/CS463 -- Computer security II/MP3/mp3_server/: Makefile  client.py
2018spr_course/CS463 -- Computer security II/MP3/mp3_server/App/: App.cpp
2018spr_course/CS463 -- Computer security II/MP3/mp3_server/Enclave/: Enclave.cpp
2018spr_course/ECE 598 -- Advanced Wireless Networks and Sensing System/: start.txt
2019_fall/CS598Rk/: KNN_Accuracy(0).ipynb  KNN_Accuracy.ipynb  KNN_Accuracy.py  LR_Accuracy(0).ipynb  LR_Accuracy.ipynb  Query Results.csv  Query_Normalized_Results_With_emoji_out.csv  README.md  data(0).csv  data.csv  main.py  myfile.csv
2019_spr/CS544/: README.md
(+293 files in other folders)
